--- a/scss/page-styles/edit-recipe.scss
+++ b/scss/page-styles/edit-recipe.scss
@@ -4,7 +4,8 @@
         padding: 0;
     }
 
-    .step-label {
+    .page-title2 {
+        margin-bottom: 20px;
         span {
             font-size: 12px;
             font-weight: 300;
@@ -14,7 +15,6 @@
 
     .main-button-clear {
         padding: 0;
-        height: 33px;
         width: 50px;
         margin-top: -8px;
         margin-right: 10px;
@@ -27,6 +27,12 @@
             background: linear-gradient(to bottom, #1DB0B5, #189599);
             color: $main-button-color-hv;
             border: 1px solid #1DB0B5;
+        }
+    }
+    .top-step {
+        .main-button-clear {
+            margin-top: 0;
+            margin-right: 0;
         }
     }
 
