--- a/templates/pages/edit-recipe.html
+++ b/templates/pages/edit-recipe.html
@@ -2,7 +2,7 @@
 <div class="container">
     <h1 class="hidden">Edit Recipe</h1>
     <div class="col-lg-12">
-        <h2 class="page-title">Edit you recipes</h2>
+        <h2 class="page-title">Edit you recipe</h2>
         {% with errors = get_flashed_messages(category_filter=["recipe-edited"]) %} {% if errors %}
         <div id="flash-message" class="{{'recipe-edited' if recipe_edited !='' else 'hidden'}}">
             {%- for msg in errors %}
@@ -13,7 +13,7 @@
     </div>
     <!-- edit recipe form -->
     <div class="edit-recipe-container">
-        <form id="new-recipe-form" name="new-recipe-form" action="{{ url_for('add_recipe') }}" method="POST" enctype="multipart/form-data">
+        <form id="edit-recipe-form" name="edit-recipe-form" action="{{ url_for('edit_recipe',recipe_id = recipe_doc['_id']) }}" method="POST" enctype="multipart/form-data">
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-lg-6 recipe-details">
                 <h4 class="page-title2">Recipe Information:</h4>
                 <div class="form-row">
