--- a/templates/pages/recipe.html
+++ b/templates/pages/recipe.html
@@ -2,6 +2,13 @@
 <div class="container">
     <h1 class="hidden">Recpie - {{this_recipe['title']}}</h1>
     <div class="this-recipe-container">
+        {% with errors = get_flashed_messages(category_filter=["recipe-edited"]) %} {% if errors %}
+        <div id="flash-message" class="{{'recipe-edited' if recipe_edited !='' else 'hidden'}}">
+            {%- for msg in errors %}
+            <p>{{ msg }}</p>
+            {% endfor -%}
+        </div>
+        {% endif %} {% endwith %}
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 top-recipe-section">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 col-xl-3 recipe-photo">
                 <img src="/file/{{this_recipe['recipe_image']}}" alt="image - {{this_recipe['title']}}">
