--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1756,6 +1756,26 @@ form p {
   border: 2px solid #FFF;
   box-shadow: 0px 0px 5px 1px #ccc;
 }
+.recipe-photo button:hover {
+  color: #FFF;
+  text-decoration: none;
+}
+
+.edit-button {
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  background-color: #000;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  box-shadow: 0px 0px 5px 1px #ccc;
+  font-weight: 400;
+  color: #FFF;
+  text-align: center;
+}
+.edit-button:hover {
+  background-color: #1DB0B5;
+}
 
 .prepare-info {
   font-size: 1rem;
