--- a/templates/pages/recipe.html
+++ b/templates/pages/recipe.html
@@ -2,7 +2,7 @@
 <div class="container">
     <h1 class="hidden">Recpie - {{this_recipe['title']}}</h1>
     <div class="this-recipe-container">
-        {% with errors = get_flashed_messages(category_filter=["recipe-edited"]) %} {% if errors %}
+        {% with errors = get_flashed_messages(category_filter=["recipe_edited"]) %} {% if errors %}
         <div id="flash-message" class="{{'recipe-edited' if recipe_edited !='' else 'hidden'}}">
             {%- for msg in errors %}
             <p>{{ msg }}</p>
@@ -10,8 +10,11 @@
         </div>
         {% endif %} {% endwith %}
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 top-recipe-section">
-            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 col-xl-3 recipe-photo">
-                <img src="/file/{{this_recipe['recipe_image']}}" alt="image - {{this_recipe['title']}}">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 col-xl-3">
+                <div class="recipe-photo">
+                    <button class="btn edit-button" onclick="window.location.href='{{url_for('edit_recipe',recipe_id = this_recipe['_id'])}}';">Edit</button>
+                    <img src="/file/{{this_recipe['recipe_image']}}" alt="image - {{this_recipe['title']}}">
+                </div>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 col-xl-8">
                 <div class="top-info">
@@ -69,4 +72,4 @@
         </div>
     </div>
 </div>
-{% endblock %} d
+{% endblock %}
