--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1670,8 +1670,8 @@ form p {
   justify-content: center;
   height: 40px;
   width: 100%;
-  border: 1px solid #FF3366;
-  background-color: rgba(255, 172, 193, 0.6);
+  border: 1px solid #5aac17;
+  background-color: rgba(230, 255, 204, 0.6);
   border-radius: 5px;
   text-align: left;
 }
@@ -1681,7 +1681,6 @@ form p {
   font-size: 0.85rem;
   font-weight: 400;
   color: #5aac17;
-  color: #FF3366;
 }
 
 #your-recipes-page {
