--- a/templates/pages/edit-recipe.html
+++ b/templates/pages/edit-recipe.html
@@ -56,10 +56,10 @@
                             {% for ingredient in recipe_doc['ingredients'] %}
                             <div class="ingredient">
                                 <div class="top-ingredient">
-                                    <button class="clearIngredient btn main-button-clear" type="button">clear</button>
+                                    <button class="removeingredient btn main-button-small" type="button">x</button>
                                     <div class="ingredient-inputs">
-                                        <input type="text" class="form-control" id="ingredient-name" name="ingredient-name-{{recipe_doc['ingredients'].index(ingredient)}}" placeholder="Ingredient" value="{{ingredient}}">
-                                        <input type="text" class="form-control" id="ingredient-scale" name="ingredient-scale-{{recipe_doc['ingredients'].index(ingredient)}}" placeholder="2g/5ml" value="{{recipe_doc['ingredients-scale'][recipe_doc['ingredients'].index(ingredient)]}}">
+                                        <input type="text" class="form-control" id="ingredient-name" name="ingredient-name-{{recipe_doc['ingredients'].index(ingredient)}}" placeholder="Ingredient" value="{{ingredient}}" required>
+                                        <input type="text" class="form-control" id="ingredient-scale" name="ingredient-scale-{{recipe_doc['ingredients'].index(ingredient)}}" placeholder="2g/5ml" value="{{recipe_doc['ingredients-scale'][recipe_doc['ingredients'].index(ingredient)]}}" required>
                                     </div>
                                 </div>
                             </div>
@@ -78,7 +78,7 @@
                             <div class="step">
                                 <div class="top-step">
                                     <label class="step-label">Step {{recipe_doc['preparation'].index(step) + 1}}</label>
-                                    <button class="clearStep btn main-button-clear" type="button">clear</button>
+                                    <button class="removeStep btn main-button-small" type="button">x</button>
                                 </div>
                                 <textarea class="form-control" name="preparation-step-{{recipe_doc['preparation'].index(step)}}" rows="2" id="preparation-step">{{step}}
                                 </textarea>
@@ -96,7 +96,7 @@
                             <div class="tip">
                                 <div class="top-tip">
                                     <label class="tip-label">Tips {{recipe_doc['tips'].index(tip) + 1}}</label>
-                                    <button class="clearTip btn main-button-clear" type="button">clear</button>
+                                    <button class="removeTip btn main-button-small" type="button">x</button>
                                 </div>
                                 <textarea class="form-control" name="tip-step-{{recipe_doc['tips'].index(tip)}}" rows="2" id="preparation-tip" placeholder="Tip explanation">{{tip}}</textarea>
                             </div>
