--- a/templates/pages/edit-recipe.html
+++ b/templates/pages/edit-recipe.html
@@ -2,7 +2,7 @@
 <div class="container">
     <h1 class="hidden">Edit Recipe</h1>
     <div class="row top-title">
-        <h2 class="page-title"><span>"{{recipe_doc['title']}}"</span></h2>
+        <h2 class="page-title">You are editing <span>"{{recipe_doc['title']}}"</span></h2>
         <div class="edit-recipe-photo">
             <img src="/file/{{recipe_doc['recipe_image']}}" alt="image-{{recipe_doc['title']}}">
         </div>
