--- a/templates/pages/recipe.html
+++ b/templates/pages/recipe.html
@@ -18,8 +18,11 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 top-recipe-section">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 col-xl-3">
                 <div class="recipe-photo">
+                    {% if session['email'] == this_recipe['author'] %}
                     <button class="btn edit-button" onclick="window.location.href='{{url_for('edit_recipe',recipe_id = this_recipe['_id'])}}';">Edit</button>
                     <button class="btn delete-button" onclick="window.location.href='{{url_for('remove_recipe',recipe_id = this_recipe['_id'])}}';">Del</button>
+                    {% else %}
+                    {% endif %}
                     <img src="/file/{{this_recipe['recipe_image']}}" alt="image - {{this_recipe['title']}}">
                 </div>
             </div>
