--- a/templates/layout/head.html
+++ b/templates/layout/head.html
@@ -19,7 +19,7 @@
 <!-- Hover css -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
 <!-- Main css style -->
-<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
+<link rel="stylesheet" href="{{url_for('static', filename='css/style.min.css')}}" type="text/css" />
 <!-- Website title -->
 <title>Baking Master | Become a baking master of your home!</title>
     
